--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "engines": {
     "node": "15.6.0"
   },
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js"
   },
@@ -29,7 +30,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "fsevents": "^2.3.2",
     "helmet": "^4.6.0",
     "joi": "^17.4.0",
     "joi-objectid": "^3.0.1",
